--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>SPMB</title>
-  <link rel="icon" href="https://upload.wikimedia.org/wikipedia/commons/9/98/Kota_Bengkulu.png" />
+  <link rel="icon" href="https://upload.wikimedia.org/wikipedia/commons/thumb/9/9c/Logo_of_Ministry_of_Education_and_Culture_of_Republic_of_Indonesia.svg/250px-Logo_of_Ministry_of_Education_and_Culture_of_Republic_of_Indonesia.svg.png" />
   <style>
     html, body {
       margin: 0;
@@ -33,7 +33,7 @@
   <div class="iframe-container">
     <iframe
       id="app"
-      src="https://script.google.com/macros/s/AKfycbxunFw9APNPfzdga_2sLLwiZSYrJwIbhtpd0udIEolQPYvOwTDAfR0I39JCh7X43Fh_/exec"
+      src="https://script.google.com/macros/s/AKfycby_6RR1CARmn6uvzzyn5ss2oMVgcRWhq2-9Q59pvz4vPXplJYpKfI01evvNKEJ7uHk/exec"
       scrolling="yes"
       allowfullscreen="true"
       webkitallowfullscreen="true"
